--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-csso": "^1.0.0",
+    "gulp-file-include": "^1.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^3.0.3",
     "gulp-minify-html": "^1.0.6",
@@ -20,8 +21,7 @@
     "gulp-util": "^3.0.6",
     "gulp.spritesmith": "^6.2.1",
     "merge-stream": "^1.0.0",
-    "spritesmith": "^3.1.0",
-    "gulp-file-include": "^1.0.0"
+    "spritesmith": "^3.1.0"
   },
   "description": "Diplom HTML and CSS basic",
   "main": "gulpfile.js",
